--- a/decode.html
+++ b/decode.html
@@ -16,13 +16,17 @@
         </a>
     </div>  
 
-    <div class="slidecontainer">
-        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-      </div>
-
     <hr>
     <div id="textField"></div>
     <hr>
+    <div id="tlumaczenie"></div>
+
+    <div class="sliderek">
+        <p id="units"></p>
+        <div class="slidecontainer">
+            <input type="range" min="0.05" max="1.5" step="0.01" value="0.15" class="slider" id="myRange">
+        </div>
+    </div>
 
     <script type="text/javascript" src="mcode.json"></script>
     <script src="decode.js"></script>
